testsuite/tests/interpreter_errors/call_property_wrong_type/test.out
script.lkql:2:7: error: Cannot convert a Int to a Bool
2 | print(names[1].p_referenced_decl(1))
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
